--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,11 +1,3 @@
-<!--
-  This example requires updating your template:
-
-  ```
-  <html class="h-full bg-white">
-  <body class="h-full">
-  ```
--->
 <div class="flex min-h-full flex-col justify-center px-6 py-12 lg:px-8">
     <div class="sm:mx-auto sm:w-full sm:max-w-sm">
         <!-- <img class="mx-auto h-10 w-auto" src="/src/assets/images/logo.png" alt="Your Company"> -->
@@ -13,11 +5,11 @@
     </div>
 
     <div class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm">
-        <form class="space-y-6" action="#" method="POST">
+        <form class="space-y-6" [formGroup]="loginForm" (ngSubmit)="onSubmit()">
             <div>
                 <label for="email" class="block text-sm/6 font-medium text-gray-900">Kullanıcı Adı</label>
                 <div class="mt-2">
-                    <input type="email" name="email" id="email" autocomplete="email" required
+                    <input type="text" name="text" id="text" required formControlName="username"
                         class="block w-full rounded-md bg-white px-3 py-1.5 text-base text-gray-900 outline-1 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline-2 focus:-outline-offset-2 focus:outline-indigo-600 sm:text-sm/6">
                 </div>
             </div>
@@ -28,6 +20,7 @@
                 </div>
                 <div class="mt-2">
                     <input type="password" name="password" id="password" autocomplete="current-password" required
+                        formControlName="password"
                         class="block w-full rounded-md bg-white px-3 py-1.5 text-base text-gray-900 outline-1 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline-2 focus:-outline-offset-2 focus:outline-indigo-600 sm:text-sm/6">
                 </div>
             </div>
