--- a/src/app/layout/layout/layout.component.html
+++ b/src/app/layout/layout/layout.component.html
@@ -1,6 +1,15 @@
 <!-- <app-sidebar></app-sidebar>
-<app-header></app-header> -->
-<router-outlet></router-outlet>
+<app-header></app-header>
+<router-outlet></router-outlet> -->
+
+
+<app-header></app-header>
+<div class="dashboard-container">
+    <app-sidebar></app-sidebar>
+    <div class="content">
+        <router-outlet></router-outlet>
+    </div>
+</div>
 
 <!-- 
 <div class="flex ...">
