--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,7 +1,6 @@
 <div class="flex min-h-full flex-col justify-center px-6 py-12 lg:px-8">
     <div class="sm:mx-auto sm:w-full sm:max-w-sm">
-        <!-- <img class="mx-auto h-10 w-auto" src="/src/assets/images/logo.png" alt="Your Company"> -->
-        <h2 class="mt-10 text-center text-2xl/9 font-bold tracking-tight text-gray-900">Sign in to your account</h2>
+        <img class="mx-auto h-10 w-auto" src="assets/images/logo.png" alt="Moneytolia">
     </div>
 
     <div class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm">
