--- a/src/app/campaign/campaign.component.html
+++ b/src/app/campaign/campaign.component.html
@@ -1,9 +1,8 @@
 @if (campaigns().length > 0;) {
-<div class="grid grid-cols-4 gap-4 content">
+<div class="grid xl:grid-cols-4 :grid-cols-3  md:grid-cols-2 sm:grid-cols-1  xs:grid-cols-1  gap-4 content">
     @for (campaign of campaigns(); track trackById) {
-    <div
-        class="relative flex flex-col md:flex-row w-full my-6 bg-white shadow-sm border border-slate-200 rounded-lg w-96">
-        <div class="relative p-2.5 md:w-1/5 shrink-0 overflow-hidden">
+    <div class="relative flex flex-col  w-full my-6 bg-white shadow-sm border border-slate-200 rounded-lg w-96">
+        <div class="relative p-2.5 md:w-2/5 shrink-0 overflow-hidden">
             <div
                 class="mb-4 rounded-full bg-teal-600 py-0.5 px-2.5 border border-transparent text-xs text-white transition-all shadow-sm w-20 text-center">
                 {{ campaign.points }}
@@ -16,7 +15,7 @@
             <p class="mb-8 text-slate-600 leading-normal font-light">
                 {{ campaign.description }}
             </p>
-            <div class="group my-3 inline-flex flex-wrap justify-center items-center gap-2">
+            <div class="group my-3 inline-flex flex-wrap items-center gap-2">
                 <button
                     class="rounded-full border border-slate-300 py-2 px-4 text-center text-sm transition-all shadow-sm hover:shadow-lg text-slate-600 hover:text-white hover:bg-slate-800 hover:border-slate-800 focus:text-white focus:bg-slate-800 focus:border-slate-800 active:border-slate-800 active:text-white active:bg-slate-800 disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none"
                     type="button">
