--- a/src/app/layout/layout/layout.component.scss
+++ b/src/app/layout/layout/layout.component.scss
@@ -1,5 +1,7 @@
-.content {
-    margin-left: 256px;
+@media (min-width: 1024px) {
+    .content {
+        margin-left: 256px;
+    }
 }
 
 .dashboard-container {
