--- a/src/app/campaign/campaign.component.html
+++ b/src/app/campaign/campaign.component.html
@@ -31,6 +31,11 @@
                     type="button">
                     Sil
                 </button>
+                <button (click)="updateCampaign(campaign)"
+                    class="rounded-full border border-slate-300 py-2 px-4 text-center text-sm transition-all shadow-sm hover:shadow-lg text-slate-600 hover:text-white hover:bg-slate-800 hover:border-slate-800 focus:text-white focus:bg-slate-800 focus:border-slate-800 active:border-slate-800 active:text-white active:bg-slate-800 disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none"
+                    type="button">
+                    Güncelle
+                </button>
                 <div class="flex flex-col ml-3 text-sm">
                     <span class="text-slate-600">
                         {{ campaign.date }}
