--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,6 +1,7 @@
 <nav class="bg-white border-gray-200 dark:bg-gray-900 content">
     <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
-        <a href="https://flowbite.com/" class="flex items-center space-x-3 rtl:space-x-reverse">
+        <a [routerLink]="['/']" routerLinkActive="router-link-active"
+            class="flex items-center space-x-3 rtl:space-x-reverse">
             <img src="assets/images/logo.png" class="h-8" alt="Moneytolia" />
         </a>
         <button data-collapse-toggle="navbar-default" type="button"
@@ -15,7 +16,9 @@
         <div class="hidden w-full md:block md:w-auto" id="navbar-default">
             <ul
                 class="font-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
-                <li>
+
+                <app-sidebar-elements class="lg:hidden"></app-sidebar-elements>
+                <li class="mt-5">
                     <button type="button" (click)="logout()"
                         class="block py-2 px-3 text-white bg-blue-700 rounded-sm md:bg-transparent md:text-blue-700 md:p-0 dark:text-white md:dark:text-blue-500"
                         aria-current="page">Çıkış Yap</button>
