(master) - Fix responsive

--- a/src/app/campaign/campaign-update/campaign-update.component.scss
+++ b/src/app/campaign/campaign-update/campaign-update.component.scss
@@ -1,4 +1,6 @@
-:host ::ng-deep mat-dialog-content {
-    width: 500px !important;
-    height: 450px !important;
+@media (min-width: 768px) {
+    :host ::ng-deep mat-dialog-content {
+        width: 500px !important;
+        height: 450px !important;
+    }
 }
