(master) - Fix campaign card

--- a/src/app/campaign/campaign.component.html
+++ b/src/app/campaign/campaign.component.html
@@ -45,8 +45,8 @@
 
         </div>
     </div>
-    } @empty {
-    <p>Kampanya bulunamadı.</p>
     }
 </div>
+}@else{
+<p>Kampanya bulunamadı.</p>
 }
