--- a/src/app/campaign/campaign-create/campaign-create.component.html
+++ b/src/app/campaign/campaign-create/campaign-create.component.html
@@ -1,31 +1,31 @@
 @if(isEditMode()){
-<h3 class="text-3xl font-bold dark:text-white max-w-md mx-auto mb-5">Kampanyayı Güncelle</h3>
+<h3 class="text-3xl font-bold max-w-md mx-auto mb-5">Kampanyayı Güncelle</h3>
 }@else{
-<h3 class="text-3xl font-bold dark:text-white max-w-md mx-auto mb-5">Kampanya Oluştur</h3>
+<h3 class="text-3xl font-bold max-w-md mx-auto mb-5">Kampanya Oluştur</h3>
 }
 
 <form class="max-w-md mx-auto" [formGroup]="campaignForm" (ngSubmit)="onSubmit()">
     <div class="relative z-0 w-full mb-5 group">
         <input type="text" name="title" id="title" formControlName="title"
-            class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer"
+            class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none focus:outline-none focus:ring-0 focus:border-blue-600 peer"
             placeholder=" " required />
         <label for="title"
-            class="peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 rtl:peer-focus:translate-x-1/4 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">
+            class="peer-focus:font-medium absolute text-sm text-gray-500 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 rtl:peer-focus:translate-x-1/4 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">
             Başlık
         </label>
     </div>
     <div class="relative z-0 w-full mb-5 group">
-        <label for="description" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Açıklama</label>
+        <label for="description" class="block mb-2 text-sm font-medium text-gray-900">Açıklama</label>
         <textarea id="description" rows="4" formControlName="description" required
-            class="block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+            class="block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500"
             placeholder="Lütfen açıklama giriniz..."></textarea>
     </div>
 
     @if(isEditMode()){
     <button type="submit" [disabled]="campaignForm.invalid"
-        class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Güncelle</button>
+        class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center">Güncelle</button>
     }@else{
     <button type="submit" [disabled]="campaignForm.invalid"
-        class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Oluştur</button>
+        class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center">Oluştur</button>
     }
 </form>
