--- a/src/app/shared/sidebar/sidebar-elements/sidebar-elements.component.html
+++ b/src/app/shared/sidebar/sidebar-elements/sidebar-elements.component.html
@@ -2,7 +2,7 @@
     <ul class="space-y-1">
         <li>
             <a class="flex items-center gap-x-3.5 py-2 px-2.5 bg-gray-100 text-sm text-gray-800 rounded-lg hover:bg-gray-100 focus:outline-hidden focus:bg-gray-100"
-                [routerLink]="['/campaigns']">
+                [routerLink]="['/campaigns']" routerLinkActive="bg-gray-100">
                 <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
                     fill="#1f1f1f">
                     <path
@@ -13,8 +13,8 @@
         </li>
 
         <li>
-            <a class="w-full flex items-center gap-x-3.5 py-2 px-2.5 text-sm text-gray-800 rounded-lg hover:bg-gray-100 focus:outline-hidden focus:bg-gray-100"
-                [routerLink]="['/campaign-create']">
+            <a class="w-full flex items-center gap-x-3.5 py-2 px-2.5 text-sm text-gray-800 rounded-lg hover:bg-gray-100 focus:outline-hidden focus:bg-gray-100 "
+                [routerLink]="['/campaign-create']" routerLinkActive="bg-gray-100">
                 <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
                     fill="#1f1f1f">
                     <path
